# ngpod

./: .gitignore  README.md  TODO  ngpod.sln  ngpod.sublime-project
ngpod/: AbstractTimer.cpp  AbstractTimer.h  AbstractWallpaper.cpp  AbstractWallpaper.h  Application.cpp  Application.h  CMakeLists.txt  GtkApplication.cpp  GtkApplication.h  GtkPresenter.cpp  GtkPresenter.h  GtkTimer.cpp  GtkTimer.h  IPresenter.h  Logger.cpp  Logger.h  MateWallpaper.cpp  MateWallpaper.h  XfceWallpaper.cpp  XfceWallpaper.h  config.h  gui.glade  main.c  main.cpp  ngpod-downloader.c  ngpod-downloader.cpp  ngpod-downloader.h  ngpod-presenter.c  ngpod-presenter.cpp  ngpod-presenter.h  ngpod-settings.c  ngpod-settings.cpp  ngpod-settings.h  ngpod-timer.c  ngpod-timer.cpp  ngpod-timer.h  ngpod-wallpaper.c  ngpod-wallpaper.cpp  ngpod-wallpaper.h  ngpod-watcher.c  (+8 more)
